--- a/site/content/community/_index.html
+++ b/site/content/community/_index.html
@@ -13,11 +13,11 @@ layout: section
   <div class="grid two">
     <div class="col">
       <div class="icon">
-        <img class="logo-big" alt="GitHub logo" src="/img/github.svg" />
+        <img class="logo-big" alt="GitHub logo" src="img/github.svg" />
       </div>
       <div class="content">
         <h3>
-          <a target="_blank" rel="noopener" href="https://github.com/vmware-tanzu/kubeapps/"
+          <a target="_blank" rel="noopener" href="https://github.com/sap/kubeapps/"
             title="This link will open in a new tab">
             Check out GitHub</a>
         </h3>
@@ -35,14 +35,14 @@ layout: section
         </p>
         <p>
           If you are ready to jump in and add code, tests, or help with documentation, follow the guidelines in the
-          <a href="/docs/latest/project/contributing/">
+          <a href="docs/latest/project/contributing/">
             contributing documentation</a>.
         </p>
       </div>
     </div>
     <div class="col">
       <div class="icon">
-        <img class="logo-big" alt="Slack logo" src="/img/slack.svg" />
+        <img class="logo-big" alt="Slack logo" src="img/slack.svg" />
       </div>
       <div class="content">
         <h3>
